--- a/bower.json
+++ b/bower.json
@@ -20,11 +20,11 @@
   ],
   "dependencies": {
     "angular": "angularjs#~1.4.6",
-    "angular-locale-ru": "~1.3.0",
-    "angular-route": "~1.4.6",
-    "mobile-angular-ui": "~1.2.0-rc.3",
-    "require-css": "~0.1.8",
+    "angular-i18n": "~1.4.6",
+    "ionic": "~1.1.0",
     "requirejs": "~2.1.20",
-    "requirejs-domready": "~2.0.1"
+    "requirejs-domready": "~2.0.1",
+    "requirejs-plugins": "~1.0.3",
+    "text": "requirejs/text#~2.0.14"
   }
 }
