--- a/api/.htaccess
+++ b/api/.htaccess
@@ -1,3 +1,7 @@
 RewriteEngine On
+
+RewriteCond %{HTTP:Authorization} .+
+RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^ index.php [QSA,L]
