--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "angular": "angularjs#~1.4.6",
     "angular-i18n": "~1.4.6",
+    "angular-local-storage": "~0.2.2",
     "ionic": "~1.1.0",
     "requirejs": "~2.1.20",
     "requirejs-domready": "~2.0.1",
