Исправил composer.json для совместимости с PHP 5.3.8

--- a/api/composer.json
+++ b/api/composer.json
@@ -11,7 +11,8 @@
     "require": {
         "slim/slim": "2.x-dev",
         "catfan/medoo": "dev-master",
-        "robmorgan/phinx": "dev-master",
+        "symfony/filesystem": "2.6.11",
+        "robmorgan/phinx": "0.4.3",
         "packagist/closurecompiler-bin": "dev-master",
         "kneu/api": "dev-master",
         "ext-json": "*"
