--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "angular-local-storage": "~0.2.2",
     "ionic": "~1.1.0",
     "requirejs": "~2.1.20",
+    "require-css": "~0.1.8",
     "requirejs-domready": "~2.0.1",
     "requirejs-plugins": "~1.0.3",
     "text": "requirejs/text#~2.0.14"
